Hive off definitions into a glossary
Fixes #2325

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -6,6 +6,7 @@ parts:
   - file: installation
 - caption: Concepts
   chapters:
+  - file: glossary
   - file: data-model
   - file: metadata
   - file: provenance
