--- a/python/requirements/CI-complete/requirements.txt
+++ b/python/requirements/CI-complete/requirements.txt
@@ -11,7 +11,8 @@ msgpack==1.0.3
 msprime==1.2.0
 networkx==2.6.3
 newick==1.3.2
-numpy==1.21.5
+numpy==1.21.6 # Held at 1.21.6 for Python 3.7 compatibility
+
 portion==2.2.0
 pyparsing==3.0.7
 pysam==0.19.0
