--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -48,7 +48,7 @@ packages = tskit
 python_requires = >=3.7
 include_package_data = True
 install_requires =
-    jsonschema>=3.0.0
+    jsonschema>=3.0.0,<4.10.0
     numpy>=1.7
     svgwrite>=1.1.10
 setup_requires =
