--- a/python/requirements/CI-complete/requirements.txt
+++ b/python/requirements/CI-complete/requirements.txt
@@ -1,23 +1,22 @@
 biopython==1.79
 black==21.12b0
-coverage==6.3.2
+coverage==6.5.0
 dendropy==4.5.2
-flake8==4.0.1
-h5py==3.6.0
+flake8==5.0.4
+h5py==3.7.0
 jsonschema==4.16.0
-kastore==0.3.1
-lshmm==0.0.2
-msgpack==1.0.3
+kastore==0.3.2
+lshmm==0.0.4
+msgpack==1.0.4
 msprime==1.2.0
-networkx==2.6.3
+networkx==2.6.3 # Held at 2.6.3 for Python 3.7 compatibility
 newick==1.3.2
 numpy==1.21.6 # Held at 1.21.6 for Python 3.7 compatibility
-
-portion==2.2.0
-pyparsing==3.0.7
-pysam==0.19.0
-pytest==7.1.1
-pytest-cov==3.0.0
+portion==2.3.0
+pyparsing==3.0.9
+pysam==0.19.1
+pytest==7.1.3
+pytest-cov==4.0.0
 pytest-xdist==2.5.0
-svgwrite==1.4.2
+svgwrite==1.4.3
 xmlunittest==0.5.0
