--- a/python/requirements/CI-docs/requirements.txt
+++ b/python/requirements/CI-docs/requirements.txt
@@ -1,16 +1,13 @@
-breathe==4.33.1
-jupyter-book==0.13.0
-h5py==3.6.0
-jsonschema==3.2.0
+breathe==4.34.0
+jupyter-book==0.13.1
+h5py==3.7.0
+jsonschema==3.2.0 #jupyter-book 0.13.1 depends on jsonschema<4
 msprime==1.2.0
 numpy==1.21.6 # Held at 1.21.6 for Python 3.7 compatibility
 PyGithub==1.55
 sphinx-argparse==0.3.1
-sphinx-autodoc-typehints==1.18.3
+sphinx-autodoc-typehints==1.18.3 # Held at 1.18.3 as that depends on sphinx>=5.2.1 while jupyter-book 0.13.1 depends on sphinx<5
 sphinx-issues==3.0.1
 sphinxcontrib-prettyspecialmethods==0.1.0
-svgwrite==1.4.2
+svgwrite==1.4.3
 tskit-book-theme==0.3.2
-# These are added for the new pip stricter resolver until packages fix their dep specifications
-Jinja2==3.0.3
-ipywidgets==7.7.2
