--- a/python/requirements/CI-tests-pip/requirements.txt
+++ b/python/requirements/CI-tests-pip/requirements.txt
@@ -1,14 +1,14 @@
-lshmm==0.0.2
+lshmm==0.0.4
 numpy==1.21.6 # Held at 1.21.6 for Python 3.7 compatibility
-pytest==7.1.1
-pytest-cov==3.0.0
+pytest==7.1.3
+pytest-cov==4.0.0
 pytest-xdist==2.5.0
-h5py==3.6.0
-svgwrite==1.4.2
-portion==2.2.0
+h5py==3.7.0
+svgwrite==1.4.3
+portion==2.3.0
 xmlunittest==0.5.0
 biopython==1.79
 dendropy==4.5.2
-networkx==2.6.3
-msgpack==1.0.3
+networkx==2.6.3 # Held at 2.6.3 for Python 3.7 compatibility
+msgpack==1.0.4
 newick==1.3.2
