--- a/.mergify.yml
+++ b/.mergify.yml
@@ -7,10 +7,13 @@ queue_rules:
       - status-success=Lint
       - status-success=Python (3.7, macos-latest)
       - status-success=Python (3.9, macos-latest)
+      - status-success=Python (3.11, macos-latest)
       - status-success=Python (3.7, ubuntu-latest)
       - status-success=Python (3.9, ubuntu-latest)
+      - status-success=Python (3.11, ubuntu-latest)
       - status-success=Python (3.7, windows-latest)
       - status-success=Python (3.9, windows-latest)
+      - status-success=Python (3.11, windows-latest)
       - "status-success=ci/circleci: build"
 pull_request_rules:
   - name: Automatic rebase, CI and merge
@@ -24,10 +27,13 @@ pull_request_rules:
       - status-success=Lint
       - status-success=Python (3.7, macos-latest)
       - status-success=Python (3.9, macos-latest)
+      - status-success=Python (3.11, macos-latest)
       - status-success=Python (3.7, ubuntu-latest)
       - status-success=Python (3.9, ubuntu-latest)
+      - status-success=Python (3.11, ubuntu-latest)
       - status-success=Python (3.7, windows-latest)
       - status-success=Python (3.9, windows-latest)
+      - status-success=Python (3.11, windows-latest)
       - "status-success=ci/circleci: build"
       #- status-success=codecov/patch
       #- status-success=codecov/project/c-tests
@@ -59,10 +65,13 @@ pull_request_rules:
       - status-success=Lint
       - status-success=Python (3.7, macos-latest)
       - status-success=Python (3.9, macos-latest)
+      - status-success=Python (3.11, macos-latest)
       - status-success=Python (3.7, ubuntu-latest)
       - status-success=Python (3.9, ubuntu-latest)
+      - status-success=Python (3.11, ubuntu-latest)
       - status-success=Python (3.7, windows-latest)
       - status-success=Python (3.9, windows-latest)
+      - status-success=Python (3.11, windows-latest)
       - "status-success=ci/circleci: build"
       - "status-success=ci/circleci: build-32"
       - status-success=codecov/patch
