--- a/python/requirements/CI-tests-pip/requirements.txt
+++ b/python/requirements/CI-tests-pip/requirements.txt
@@ -1,9 +1,9 @@
-lshmm==0.0.4
-numpy==1.21.6 # Held at 1.21.6 for Python 3.7 compatibility
+lshmm==0.0.4; python_version < '3.11'
+numpy==1.21.6; python_version < '3.11' # Held at 1.21.6 for Python 3.7 compatibility
+numpy==1.24.1; python_version > '3.10'
 pytest==7.1.3
 pytest-cov==4.0.0
 pytest-xdist==2.5.0
-h5py==3.7.0
 svgwrite==1.4.3
 portion==2.3.0
 xmlunittest==0.5.0
