--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -45,6 +45,7 @@ sphinx:
       html_theme: sphinx_book_theme
       html_theme_options:
         pygment_dark_style: monokai
+        navigation_with_keys: false
       pygments_style: monokai
       myst_enable_extensions:
       - colon_fence
