--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -38,6 +38,7 @@ sphinx:
     - sphinx.ext.intersphinx
     - sphinx_issues
     - sphinxarg.ext
+    - IPython.sphinxext.ipython_console_highlighting
     #- sphinxcontrib.prettyspecialmethods
 
     config:
