Add multi-chromosome WF example
endpoint fix

multichromosome profiling

added multichom singlethreaded

Fix compile

--- a/c/meson.build
+++ b/c/meson.build
@@ -122,5 +122,13 @@ if not meson.is_subproject()
       executable('haploid_wright_fisher',
           sources: ['examples/haploid_wright_fisher.c'], 
           link_with: [tskit_lib], dependencies: lib_deps)
+      executable('multichrom_wright_fisher_singlethreaded',
+          sources: ['examples/multichrom_wright_fisher_singlethreaded.c'], 
+          link_with: [tskit_lib], dependencies: lib_deps)
+
+      thread_dep = dependency('threads')
+      executable('multichrom_wright_fisher',
+          sources: ['examples/multichrom_wright_fisher.c'], 
+          link_with: [tskit_lib], dependencies: [m_dep, kastore_dep, thread_dep])
     endif
 endif
