--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.6.0
+        uses: styfle/cancel-workflow-action@0.11.0
         with:
           access_token: ${{ github.token }}
 
@@ -30,34 +30,36 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.8
-
-      - uses: actions/cache@v3
-        id: cache
-        with:
-          path: venv
-          key: docs-venv-v7-${{ hashFiles(env.REQUIREMENTS) }}
-
-      - name: Build virtualenv
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: python -m venv venv
-
-      - name: Downgrade pip
-        run: venv/bin/activate && pip install pip==20.0.2
-
-      - name: Install deps
-        run: venv/bin/activate && pip install -r ${{env.REQUIREMENTS}}
+          python-version: "3.10"
 
       - name: Install apt deps
         if: env.APTGET
         run: sudo apt-get install -y ${{env.APTGET}}
 
+      - uses: actions/cache@v3
+        id: venv-cache
+        with:
+          path: venv
+          key: docs-venv-v1-${{ hashFiles(env.REQUIREMENTS) }}
+
+      - name: Create venv and install deps (one by one to avoid conflict errors)
+        if: steps.venv-cache.outputs.cache-hit != 'true'
+        run: |
+          python -m venv venv
+          . venv/bin/activate
+          pip install --upgrade pip wheel
+          cat ${{env.REQUIREMENTS}} | sed -e '/^\s*#.*$/d' -e '/^\s*$/d' | xargs -n 1 pip install --no-dependencies          
+
       - name: Build C module
         if: env.MAKE_TARGET
-        run: venv/bin/activate && make $MAKE_TARGET
+        run: |
+          . venv/bin/activate
+          make $MAKE_TARGET
 
       - name: Build Docs
-        run: venv/bin/activate && make -C docs
+        run: |
+          . venv/bin/activate
+          make -C docs
 
       - name: Trigger docs site rebuild
         if: github.ref == 'refs/heads/main'
