--- a/python/requirements/CI-docs/requirements.txt
+++ b/python/requirements/CI-docs/requirements.txt
@@ -1,13 +1,154 @@
+# Due to issues with indirect dependencies introducing conflicting dependencies
+# we freeze everything to get a reproducible build.
+alabaster==0.7.13
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+attrs==21.4.0
+Babel==2.11.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
 breathe==4.34.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.6
+comm==0.1.2
+debugpy==1.6.5
+decorator==5.1.1
+defusedxml==0.7.1
+demes==0.2.2
+Deprecated==1.2.13
+docutils==0.17.1
+entrypoints==0.4
+executing==1.2.0
+fastjsonschema==2.16.2
+fqdn==1.5.1
+gitdb==4.0.10
+GitPython==3.1.30
+greenlet==2.0.1
+idna==3.4
+imagesize==1.4.1
+importlib-metadata==6.0.0
+ipykernel==6.20.2
+ipython==8.8.0
+ipython-genutils==0.2.0
+ipywidgets==7.7.2
+isoduration==20.11.0
+jedi==0.18.2
+Jinja2==3.1.2
+jsonpointer==2.3
+jsonschema==4.17.3
 jupyter-book==0.13.1
-h5py==3.7.0
-jsonschema[format-nongpl]==4.17.3
+jupyter-cache==0.4.3
+jupyter-events==0.6.3
+jupyter-server-mathjax==0.2.6
+jupyter-sphinx==0.3.2
+jupyter_client==7.4.9
+jupyter_core==5.1.3
+jupyter_server==2.1.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==1.1.1
+latexcodec==2.0.1
+linkify-it-py==1.0.3
+lxml==4.9.2
+markdown-it-py==1.1.0
+MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+mdit-py-plugins==0.2.8
+mistune==0.8.4
 msprime==1.2.0
-numpy==1.21.6 # Held at 1.21.6 for Python 3.7 compatibility
-PyGithub==1.55
-sphinx-argparse==0.3.1
-sphinx-autodoc-typehints==1.18.3 # Held at 1.18.3 as that depends on sphinx>=5.2.1 while jupyter-book 0.13.1 depends on sphinx<5
+myst-nb==0.13.2
+myst-parser==0.15.2
+nbclassic==0.4.8
+nbclient==0.5.13
+nbconvert==6.5.4
+nbdime==3.1.1
+nbformat==5.7.3
+nest-asyncio==1.5.6
+newick==1.6.0
+notebook==6.5.2
+notebook_shim==0.2.2
+numpy==1.24.1
+packaging==23.0
+pandocfilters==1.5.0
+parso==0.8.3
+pbr==5.11.1
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.6.2
+prometheus-client==0.15.0
+prompt-toolkit==3.0.36
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pybtex==0.24.0
+pybtex-docutils==1.0.2
+pycparser==2.21
+pydata-sphinx-theme==0.8.1
+PyGithub==1.57
+Pygments==2.14.0
+PyJWT==2.6.0
+PyNaCl==1.5.0
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+python-json-logger==2.0.4
+pytz==2022.7.1
+PyYAML==6.0
+pyzmq==25.0.0
+requests==2.28.2
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+Send2Trash==1.8.0
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+snowballstemmer==2.2.0
+soupsieve==2.3.2.post1
+Sphinx==4.5.0
+sphinx-argparse==0.4.0
+sphinx-autodoc-typehints==1.19.1
+sphinx-book-theme==0.3.3
+sphinx-comments==0.0.3
+sphinx-copybutton==0.5.1
+sphinx-external-toc==0.2.4
 sphinx-issues==3.0.1
+sphinx-jupyterbook-latex==0.4.7
+sphinx-multitoc-numbering==0.1.3
+sphinx-thebe==0.1.2
+sphinx-togglebutton==0.3.2
+sphinx_design==0.1.0
+sphinxcontrib-bibtex==2.5.0
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-prettyspecialmethods==0.1.0
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib.applehelp==1.0.3
+SQLAlchemy==1.4.46
+stack-data==0.6.2
 svgwrite==1.4.3
+terminado==0.17.1
+tinycss2==1.2.1
+tornado==6.2
+traitlets==5.8.1
+tskit==0.5.4
 tskit-book-theme==0.3.2
+uc-micro-py==1.0.1
+uri-template==1.2.0
+urllib3==1.26.14
+wcwidth==0.2.6
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.4.2
+widgetsnbextension==3.6.1
+wrapt==1.14.1
+zipp==3.11.0
