Don't fail CI on codecov error

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -160,7 +160,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           working-directory: python
-          fail_ci_if_error: true
+          fail_ci_if_error: false
           flags: python-tests
           name: codecov-umbrella
           verbose: true
