--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -42,7 +42,7 @@ sphinx:
     #- sphinxcontrib.prettyspecialmethods
 
     config:
-      html_theme: tskit_book_theme
+      html_theme: sphinx_book_theme
       html_theme_options:
         pygment_light_style: monokai
         pygment_dark_style: monokai
