--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,10 @@ commands:
             # Install meson to the system packages so we can run it as root
             pip install --upgrade pip wheel
             sudo pip install meson
-            pip install --user numpy #Needed for some build steps in requirements.txt
-            pip install --user -r python/requirements/CI-complete/requirements.txt
+            # Needed for some build steps in requirements.txt, no blas as expensive to
+            # build on 32 bit
+            pip install --user numpy --config-settings=setup-args="-Dallow-noblas=true"
+            pip install --user -r python/requirements/CI-complete/requirements.txt --config-settings=setup-args="-Dallow-noblas=true"
             # Remove tskit installed by msprime
             pip uninstall tskit -y
             echo 'export PATH=/home/circleci/.local/bin:$PATH' >> $BASH_ENV
