Add python 3.12 support

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python: [3.8, 3.9, "3.10", 3.11]
+        python: [3.8, 3.9, "3.10", 3.11, 3.12]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -55,7 +55,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python: [3.8, 3.9, "3.10", 3.11]
+        python: [3.8, 3.9, "3.10", 3.11, 3.12]
         wordsize: [64]
     steps:
       - name: Checkout
@@ -140,7 +140,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python: [3.8, 3.9, "3.10", 3.11]
+        python: [3.8, 3.9, "3.10", 3.11, 3.12]
     steps:
       - name: Download wheels
         uses: actions/download-artifact@v2
@@ -162,7 +162,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python: [3.8, 3.9, "3.10", 3.11]
+        python: [3.8, 3.9, "3.10", 3.11, 3.12]
         wordsize: [64]
     steps:
       - name: Download wheels
@@ -186,9 +186,8 @@ jobs:
     needs: ['manylinux']
     strategy:
       matrix:
-        python: [3.8, 3.9, "3.10", 3.11]
+        python: [3.8, 3.9, "3.10", 3.11, 3.12]
         include:
-
           - python: 3.8
             wheel: cp38
           - python: 3.9
@@ -197,6 +196,8 @@ jobs:
             wheel: cp310
           - python: 3.11
             wheel: cp311
+          - python: 3.12
+            wheel: cp312
     steps:
       - name: Download wheels
         uses: actions/download-artifact@v2
