--- a/python/requirements/CI-tests-pip/requirements.txt
+++ b/python/requirements/CI-tests-pip/requirements.txt
@@ -1,6 +1,5 @@
-lshmm==0.0.5
-numpy==1.21.6; python_version < '3.11' # Held at 1.21.6 for Python 3.7 compatibility
-numpy==1.24.1; python_version > '3.10'
+lshmm==0.0.5; python_version < "3.12" #lshmm requires numba, which has no 312 release
+numpy==1.24.1;
 pytest==7.1.3
 pytest-cov==4.0.0
 pytest-xdist==2.5.0
@@ -9,7 +8,7 @@ portion==2.3.0
 xmlunittest==0.5.0
 biopython==1.79
 dendropy==4.5.2
-networkx==2.6.3 # Held at 2.6.3 for Python 3.7 compatibility
+networkx==3.1
 msgpack==1.0.4
 newick==1.3.2
 tszip==0.2.2
