--- a/python/requirements/CI-tests-pip/requirements.txt
+++ b/python/requirements/CI-tests-pip/requirements.txt
@@ -1,14 +1,15 @@
 lshmm==0.0.5; python_version < "3.12" #lshmm requires numba, which has no 312 release
 numpy==1.24.1;
-pytest==7.1.3
-pytest-cov==4.0.0
-pytest-xdist==2.5.0
+pytest==7.4.2
+pytest-cov==4.1.0
+pytest-xdist==3.3.1
 svgwrite==1.4.3
-portion==2.3.0
+portion==2.4.1
 xmlunittest==0.5.0
-biopython==1.79
-dendropy==4.5.2
+biopython==1.81
+dendropy==4.6.1
 networkx==3.1
-msgpack==1.0.4
-newick==1.3.2
+msgpack==1.0.7
+newick==1.9.0
 tszip==0.2.2
+jsonschema==4.19.1
