--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,32 +17,10 @@ repos:
     - id: clang-format
       exclude: dev-tools|examples
       verbose: true
-  - repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.12.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.5
     hooks:
-      - id: reorder-python-imports
-        args: [--application-directories=python,
-               --unclassifiable-application-module=_tskit]
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.2
-    hooks:
-      - id: pyupgrade
-        args: [--py3-plus, --py38-plus]
-  - repo: https://github.com/psf/black
-    rev: 24.4.2
-    hooks:
-      - id: black
-        language_version: python3
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.0.0
-    hooks:
-      - id: flake8
-        args: [--config=python/.flake8]
-        additional_dependencies: ["flake8-bugbear==23.9.16", "flake8-builtins==2.1.0"]
-  - repo: https://github.com/asottile/blacken-docs
-    rev: 1.16.0
-    hooks:
-      - id: blacken-docs
-        args: [--skip-errors]
-        additional_dependencies: [black==22.3.0]
-        language_version: python3
+      - id: ruff
+        args: [  "--fix", "--config", "python/ruff.toml" ]
+      - id: ruff-format
+        args: [ "--config", "python/ruff.toml" ]
