--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -49,7 +49,7 @@ python_requires = >=3.8
 include_package_data = True
 install_requires =
     jsonschema>=3.0.0
-    numpy>=1.7
+    numpy>=1.7,<2
     svgwrite>=1.1.10
 setup_requires =
     numpy>=1.7
