Add numpy pin to setup_requires

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -52,7 +52,7 @@ install_requires =
     numpy>=1.7,<2
     svgwrite>=1.1.10
 setup_requires =
-    numpy>=1.7
+    numpy>=1.7,<2
     setuptools
 
 [options.entry_points]
