--- a/python/requirements/CI-tests-pip/requirements.txt
+++ b/python/requirements/CI-tests-pip/requirements.txt
@@ -1,17 +1,14 @@
-lshmm==0.0.5
-numpy==1.24.1
-pytest==7.1.3
-pytest-cov==4.0.0
-pytest-xdist==2.5.0
+lshmm==0.0.8
+pytest==8.2.2
+pytest-cov==5.0.0
+pytest-xdist==3.6.1
 svgwrite==1.4.3
-portion==2.3.0
+portion==2.4.2
 xmlunittest==0.5.0
-biopython==1.79
-dendropy==4.5.2
-networkx==3.1
-msgpack==1.0.4
-newick==1.3.2
-tszip==0.2.2
-kastore==0.3.2
-lxml==4.9.2
-numba<=0.59.1 #Pinned directly as 0.60.0 fails
+biopython==1.83
+dendropy==5.0.1
+networkx==3.2.1
+msgpack==1.0.8
+newick==1.9.0
+kastore==0.3.3
+jsonschema==4.22.0
