--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,8 +21,9 @@ jobs:
       - name: install clang-format
         if: steps.clang_format.outputs.cache-hit != 'true'
         run: |
-          sudo pip install clang-format==6.0.1
-          sudo ln -s /usr/local/bin/clang-format /usr/local/bin/clang-format-6.0
+          python -m venv env
+          source env/bin/activate
+          pip install clang-format==6.0.1
       - uses: pre-commit/action@v3.0.0
 
   benchmark:
