--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -80,7 +80,7 @@ jobs:
           path: python/dist
 
   manylinux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4.2.2
@@ -161,7 +161,7 @@ jobs:
           python -c "import tskit"
 
   manylinux-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: ['manylinux']
     strategy:
       matrix:
@@ -194,7 +194,7 @@ jobs:
 
 
   PyPI_Upload:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     environment: release
     needs: ['windows-test', 'OSX-test', 'manylinux-test']
     permissions:
