--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python: [3.9, "3.10", 3.11, 3.12]
+        python: [3.9, "3.10", 3.11, 3.12, 3.13]
     steps:
       - name: Checkout
         uses: actions/checkout@v4.2.2
@@ -45,7 +45,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python: [3.9, "3.10", 3.11, 3.12]
+        python: [3.9, "3.10", 3.11, 3.12, 3.13]
         wordsize: [64]
     steps:
       - name: Checkout
@@ -119,7 +119,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python: [3.9, "3.10", 3.11, 3.12]
+        python: [3.9, "3.10", 3.11, 3.12, 3.13]
     steps:
       - name: Download wheels
         uses: actions/download-artifact@v4.2.0
@@ -141,7 +141,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python: [3.9, "3.10", 3.11, 3.12]
+        python: [3.9, "3.10", 3.11, 3.12, 3.13]
         wordsize: [64]
     steps:
       - name: Download wheels
@@ -165,9 +165,8 @@ jobs:
     needs: ['manylinux']
     strategy:
       matrix:
-        python: [3.9, "3.10", 3.11, 3.12]
+        python: [3.9, "3.10", 3.11, 3.12, 3.13]
         include:
-
           - python: 3.9
             wheel: cp39
           - python: "3.10"
@@ -176,6 +175,8 @@ jobs:
             wheel: cp311
           - python: 3.12
             wheel: cp312
+          - python: 3.13
+            wheel: cp313
     steps:
       - name: Download wheels
         uses: actions/download-artifact@v4.2.0
