--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build Wheel
         run: |
           cd python
-          python -m build --wheel
+          python -m build --wheel --config-setting=--plat-name=macosx_10_9_universal2
       - name: Delocate to bundle dynamic libs
         run: |
           cd python
@@ -116,10 +116,16 @@ jobs:
 
   OSX-test:
     needs: ['OSX']
-    runs-on: macos-latest
     strategy:
       matrix:
         python: [3.9, "3.10", 3.11, 3.12, 3.13]
+        runner: [macos-13, macos-15]
+        include:
+          - runner: macos-13
+            arch: x86_64
+          - runner: macos-15
+            arch: arm64
+    runs-on: ${{ matrix.runner }}
     steps:
       - name: Download wheels
         uses: actions/download-artifact@v4.2.0
@@ -129,12 +135,20 @@ jobs:
         uses: actions/setup-python@v5.4.0
         with:
           python-version: ${{ matrix.python }}
+      - name: Verify architecture
+        run: |
+          arch_name=$(uname -m)
+          echo "Running on architecture: $arch_name"
+          if [[ "$arch_name" != "${{ matrix.arch }}" ]]; then
+            echo "Error: Expected ${{ matrix.arch }} but got $arch_name"
+            exit 1
+          fi
       - name: Install wheel and test
         run: |
           python -VV
           # Install the local wheel
           pip install ./tskit-*.whl
-          python -c "import tskit"
+          python -c "import tskit; import platform; print(f'Running on {platform.machine()} architecture')"
 
   windows-test:
     needs: ['windows']
@@ -192,7 +206,6 @@ jobs:
           # Install the local wheel
           pip install ./tskit-*-${{ matrix.wheel }}-*.whl
           python -c "import tskit"
-
 
   PyPI_Upload:
     runs-on: ubuntu-24.04
