--- a/python/requirements/CI-docs/requirements.txt
+++ b/python/requirements/CI-docs/requirements.txt
@@ -4,5 +4,6 @@ sphinx-autodoc-typehints==2.3.0
 sphinx-issues==5.0.0
 sphinx-argparse==0.5.2
 msprime==1.3.3
+numba==0.61.2
 sphinx-book-theme
 pandas==2.2.3
